intel/bench_214/extr_.linuxdriversvideofbdevpxa168fb.c_set_pix_fmt_with_main/log.txt
bench_214/extr_.linuxdriversvideofbdevpxa168fb.c_set_pix_fmt_with_main/extr_.linuxdriversvideofbdevpxa168fb.c_set_pix_fmt_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
